[tool.poetry]
name = "nautilus_talks"
version = "0.1.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.13.0"
voila = "^0.3.5"
nautilus-trader = "^1.144.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
