[tool.poetry]
name = "2022-06-17"
version = "0.1.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
# Stuck on 3.9 due to 3.10/cython/numpy/scipy bug https://github.com/numpy/numpy/issues/21008
python = ">=3.9,<3.10"
nautilus-trader = "^1.147.1"
invoke = "^1.7.1"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
voila = "^0.3.5"
ipykernel = "^6.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
