[tool.poetry]
name = "2022-06-17"
version = "0.1.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
nautilus-trader = { version = "^1.160.0", extras=["ib"] }

invoke = "^1.7.1"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]
voila = "^0.3.5"
ipykernel = "^6.13.1"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
